@@ -15,6 +15,8 @@ CHANGES
 
 - Added WidgetFactory
 
+- Added fieldset support
+
 - Use resource library api
 
 - Widget refactoring
